# Rasterization

RandomRender/: CMakeLists.txt  Readme.md  main.cpp
RandomRender/render/: camera.h  light.h  phong_shader.cpp  rasterizer.cpp  rasterizer.h  render.cpp  render.h  shader.cpp  shader.h  transform.cpp  transform.h
RandomRender/scene/: object.cpp  object.h  texture.h
RandomRender/utils/: math.cpp  math.h
